Added Version Number to JAR